# gitminer-jupyter

./: .gitignore  README.md  RepoGraphs.ipynb  affinity.ipynb  analyze_logs.py  associative_modularity.py  date_range.py  daterange.py  extractor.py  gitminer.py  main.py  miner  miner.py  most_commited.py  numstat_parser.py  per_date_stats.py  prepare  pyproject.toml  requirements.txt  test_numstat_parser.py
Notebooks/: ConventionalGraph.ipynb  ConventionalOverTime.ipynb  GraphRepos.ipynb  branches.ipynb  history.ipynb  merges.ipynb  unique_lines.ipynb
OldNotebooks/: GraphRepos.ipynb  RepoGraphs.ipynb
daterange/: daterange.py  test_daterange.py
gitminer/: __init__.py
gitminer-dash/: app.py  data.py  logging_wrapper.py  miner-dash.py
gitminer-dash/algorithms/: change_series.py  sorted_commits.py  sorted_tags.py
gitminer-dash/pages/: branches.py  change_types.py  codelines.py  commits.py  conventional.py  diff_summary.py  merges.py  most_committed.py  stacking.py  strongest_pairings.py  vertical_ordering_test.py
gminer/: associative_modularity.py  extractor.py  miner.py  most_commited.py  per_date_stats.py  types.py  utility.py
tests/: test_something.py
